--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Portfolio</title>
+    <title>My Projects</title>
     <style>
         body {
             font-family: Arial, sans-serif;
